New styling for web interface

--- a/nhntlistener/listener.css
+++ b/nhntlistener/listener.css
@@ -7,3 +7,80 @@ li.rightUL {
     text-align: right;
     padding-right: 20px;
 }
+
+html, body {
+    margin: 0;
+    height: 100%;
+}
+
+body{
+  background-color: #000;
+  font-family: 'Helvetica', 'Arial', sans-serif;
+  color: #fff;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.header{
+  padding: 5em 5em 2em 5em;
+  color: #ffffff;
+  background-image: url('assets/darkplants.jpg');
+  background-repeat: repeat;
+  font-family: Gill Sans,Gill Sans MT,Calibri,sans-serif;
+  font-size: 1em;
+  background-size: auto 100%;
+}
+
+.midsection{
+  margin: 2em 5em 2em 5em;
+  font-size:1.2em;
+  background-color: #000;
+  font-size:1.2em;
+  line-height: 1.6;
+
+  color: #fff;
+  padding-bottom: 4em;
+  border-bottom: 2px solid #fff;
+}
+
+.btn{
+  align-items: center;
+  background-color: #fff;
+  border-radius: 12px;
+  box-shadow: transparent 0 0 0 3px,rgba(18, 18, 18, .1) 0 6px 20px;
+  box-sizing: border-box;
+  color: #121212;
+  cursor: pointer;
+  /* display: inline-flex; */
+  flex: 1 1 auto;
+  font-size: 1.2rem;
+  font-weight: 700;
+  justify-content: center;
+  line-height: 1;
+  margin: 0;
+  outline: none;
+  padding: 1rem 1.2rem;
+  text-align: center;
+  text-decoration: none;
+  transition: box-shadow .2s,-webkit-box-shadow .2s;
+  white-space: nowrap;
+  border: 0;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  margin-top: 1em;
+}
+
+.btn:hover {
+  box-shadow: #121212 0 0 0 3px, transparent 0 0 0 0;
+}
+
+#container-fluid{
+  margin: 2em 5em 2em 5em;
+  background-color: #000;
+  overflow: auto;
+  flex-grow: 1;
+  font-size:1.2em;
+  line-height: 1.6;
+}
