--- a/nhntlistener/listener.css
+++ b/nhntlistener/listener.css
@@ -1,11 +1,19 @@
 li.leftUL {
     text-align: left;
-    padding-left: 20px;
+
+    padding: 10px 0px 10px 20px;
+    border: 1px solid rgba(255, 255, 255, .2);
+    border-radius: 25px;
+    margin-bottom: 0.7em;
 }
 
 li.rightUL {
     text-align: right;
-    padding-right: 20px;
+
+    padding: 10px 20px 10px 0px;
+    border: 1px solid rgba(255, 255, 255, .2);
+    border-radius: 25px;
+    margin-bottom: 0.7em;
 }
 
 html, body {
@@ -30,6 +38,7 @@ body{
   font-family: Gill Sans,Gill Sans MT,Calibri,sans-serif;
   font-size: 0.8em;
   background-size: auto 100%;
+  text-align: center;
 }
 
 .midsection{
@@ -38,6 +47,7 @@ body{
   background-color: #000;
   font-size:1em;
   line-height: 1.6;
+  text-align: center;
 
   color: #fff;
   padding-bottom: 2em;
@@ -69,7 +79,7 @@ body{
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  margin: 1em 0 0 8em;
+  margin: 1em 0 0 0em;
   /* text-align: center; */
 }
 
